[package]
name = "test-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet-rs = { git = "https://github.com/lambdaclass/starknet_in_rust", branch = "pin-vm-version" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "4afacfd574de1121d61dea28f8c73e1516c7e07d"}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs", features = ["cairo-1-hints"], rev = "5db2e656d46a97d89563a74f8fc3abd595e8befb" }
